--- a/app/src/main/res/layout/activity_cash_screen.xml
+++ b/app/src/main/res/layout/activity_cash_screen.xml
@@ -7,146 +7,92 @@
     android:background="@color/black"
     tools:context=".CashScreenActivity">
 
+        <ImageView
+            android:id="@+id/back"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:background="@drawable/arrow"
+            android:layout_margin="15dp"/>
 
-    <RelativeLayout
-        android:id="@+id/rl1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:src="@color/green"/>
-
-        <TextView
-            android:id="@+id/tvcash"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cash"
-            android:textSize="23dp"
-            android:textStyle="bold"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="25dp"
-            android:textColor="@color/black"/>
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/animation"
+            android:layout_width="250dp"
+            android:layout_height="150dp"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/creditcardanimation"
+            android:layout_above="@+id/text1"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="30dp"/>
 
         <TextView
-            android:id="@+id/bbtv"
+            android:id="@+id/text2"
+            android:layout_below="@+id/animation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Bank Balance"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:layout_marginStart="50dp"
-            android:layout_below="@+id/tvcash"
-            android:layout_marginTop="70dp"/>
+            android:layout_centerHorizontal="true"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/montserrat"/>
 
         <TextView
+            android:layout_below="@+id/text2"
+            android:id="@+id/balance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/bbtv"
-            android:text="$0.00"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:layout_marginStart="70dp"
-            android:layout_marginTop="10dp"/>
+            android:text="0.00"
+            android:layout_centerHorizontal="true"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/montserrat"
+            android:layout_margin="10dp"/>
 
-        <ImageView
-            android:layout_width="250dp"
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_below="@+id/balance"
+            android:layout_width="200dp"
             android:layout_height="200dp"
-            android:layout_marginStart="200dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginEnd="5dp"
-            android:src="@drawable/credit"/>
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/rl1">
-
-        <RelativeLayout
-            android:id="@+id/rl2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-
-            <RelativeLayout
-                android:id="@+id/rell"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_centerHorizontal="true">
-
-                <ImageView
-                    android:id="@+id/grey"
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="20dp"
-                    android:src="@drawable/ellipsegrey" />
-
-                <ImageView
-                    android:layout_width="1500dp"
-                    android:layout_height="150dp"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="44dp"
-                    android:src="@drawable/ellipse_black" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:text="+"
-                    android:textColor="@color/white"
-                    android:textSize="72sp" />
-
-
-                <ImageView
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_marginStart="220dp"
-                    android:src="@drawable/curve"/>
+            android:indeterminateOnly="false"
+            android:progressDrawable="@drawable/circle"
+            android:progress="90"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="40dp"/>
 
 
 
-            </RelativeLayout>
+        <TextView
+            android:layout_width="350dp"
+            android:layout_height="wrap_content"
+            android:text="Money sorter helps you understand yours spends and guides you to save"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/montserrat"
+            android:textAlignment="center"
+            android:layout_centerHorizontal="true"
+            android:layout_above="@+id/link_account"
+            android:layout_marginBottom="30dp"
+            />
 
 
 
-        </RelativeLayout>
+        <Button
+            android:id="@+id/link_account"
+            android:layout_width="320dp"
+            android:layout_height="40dp"
+            android:fontFamily="@font/montserrat"
+            android:text="LINK ACCOUNT"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/roundgbluebutton"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="40dp"/>
 
-
-        <RelativeLayout
-            android:layout_below="@+id/rl2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="30dp"
-                android:text="Money sorter helps you understand \n your spends and guides you to save"
-                android:textColor="@color/gray"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <Button
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv"
-                android:layout_marginTop="30dp"
-                android:text="Link Account"
-                android:background="@drawable/blue_button"
-                android:textColor="@color/white"
-                android:layout_centerHorizontal="true"/>
-
-
-
-        </RelativeLayout>
 
 
     </RelativeLayout>
-
-</RelativeLayout>
