--- a/app/src/main/res/layout/activity_screen_4.xml
+++ b/app/src/main/res/layout/activity_screen_4.xml
@@ -4,41 +4,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000"
+    android:background="@color/black"
     tools:context=".Onboarding.Screen_4">
 
 
     <ImageView
-
-        android:id="@+id/imageView5"
+        android:id="@+id/image"
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"/>
+        android:layout_marginTop="200dp" />
 
-    <ImageView
-        android:id="@+id/waste"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:layout_below="@+id/imageView5"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"
-        android:src="@drawable/use1" />
-
-    <Button
-        android:id="@+id/btn"
-        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/waste"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="81dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="101dp"
-        android:background="@drawable/button_background"
-        android:text="Get Started"
-        android:textAllCaps="false"
-        android:textSize="28sp"
-        android:textStyle="bold"/>
+        android:background="@drawable/squareblue"
+        android:layout_marginTop="30dp"
+        android:layout_below="@+id/image"
+        android:layout_centerHorizontal="true">
+
+        <TextView
+            android:id="@+id/tv4"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:text="@string/click_here"
+            android:textColor="@color/white"
+           android:layout_margin="10dp"
+            android:fontFamily="@font/montserrat"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textAlignment="center"
+        />
+
+    </LinearLayout>
 
 
 </RelativeLayout>
