--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,293 +1,166 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:background="@drawable/greensquare">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/black"
+    tools:context=".SignUp.SignUp">
+
+
+
+
+    <ImageView
+        android:id="@+id/back"
+        android:layout_width="15dp"
+        android:layout_height="18dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/arrow"
+         android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"/>
+
 
     <LinearLayout
-        android:id="@+id/n"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
         android:gravity="center"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="10dp">
+        >
 
-        <EditText
-            android:id="@+id/countryCode"
-            android:layout_width="50dp"
-            android:layout_height="35dp"
-            android:textColor="@color/white"
-            android:hint="@string/country_code"
-            android:layout_marginStart="10dp"
-            android:fontFamily="@font/montserrat"
-            android:textStyle="bold"
-            android:background="@drawable/square"
-            android:textAlignment="center"
-            android:padding="5dp"
-            android:textColorHint="@android:color/darker_gray"
-            android:autofillHints="" />
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:src="@drawable/dc"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="50dp"
+            />
 
 
         <EditText
-            android:id="@+id/phoneNumber"
-            android:layout_width="180dp"
-            android:layout_height="35dp"
+            android:id="@+id/email"
+            android:layout_width="320dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/squareblue"
+            android:hint="Email"
+            android:ems="10"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="10dp"
+            android:textStyle="bold"
+            android:layout_margin="20dp"
             android:fontFamily="@font/montserrat"
             android:textColor="@color/white"
-            android:hint="@string/mobile_no"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/square"
-            android:textAlignment="center"
-            android:inputType="number"
-            android:textStyle="bold"
-            android:padding="5dp"
-            android:textColorHint="@android:color/darker_gray"
-            tools:ignore="LabelFor" />
-
-    </LinearLayout>
-
-    <EditText
-        android:id="@+id/email"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:hint="Email Address"
-        android:fontFamily="@font/montserrat"
-        android:background="@drawable/square"
-        android:textAlignment="center"
-        android:layout_marginBottom="20dp"
-        android:textStyle="bold"
-        android:inputType="textEmailAddress"
-        android:padding="5dp"
-        android:textColorHint="@android:color/darker_gray"
-        android:minWidth="250dp"
-        android:maxWidth="350dp"
-        android:textColor="@color/white"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:fontFamily="@font/montserrat"
-        android:text="@string/password_must_contain"
-        android:textColor="@color/white"
-        android:textSize="11sp"
-        android:textStyle="bold"
-        tools:ignore="SmallSp" />
-
-    <EditText
-    android:id="@+id/password"
-    android:layout_width="wrap_content"
-    android:layout_height="35dp"
-    android:hint="@string/password"
-    android:fontFamily="@font/montserrat"
-    android:background="@drawable/square"
-    android:textAlignment="center"
-    android:layout_marginBottom="5dp"
-    android:textStyle="bold"
-    android:padding="5dp"
-    android:inputType="textPassword"
-    android:textColorHint="@android:color/darker_gray"
-    android:minWidth="250dp"
-    android:maxWidth="350dp"
-    android:textColor="@color/white" />
-
-    <EditText
-        android:id="@+id/confirmPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:hint="@string/confirm_password"
-        android:fontFamily="@font/montserrat"
-        android:background="@drawable/square"
-        android:textAlignment="center"
-        android:layout_marginBottom="20dp"
-        android:textStyle="bold"
-        android:padding="5dp"
-        android:inputType="textPassword"
-        android:textColorHint="@android:color/darker_gray"
-        android:minWidth="250dp"
-        android:maxWidth="350dp"
-        android:textColor="@color/white"
-        />
-
-    <EditText
-        android:layout_below="@+id/email"
-        android:id="@+id/reference"
-        android:layout_width="250dp"
-        android:layout_height="35dp"
-        android:hint="@string/reference"
-        android:fontFamily="@font/montserrat"
-        android:background="@drawable/square"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:layout_marginBottom="40dp"
-        android:padding="5dp"
-        android:textColorHint="@android:color/darker_gray"
-        android:textColor="@color/white"
-        android:autofillHints="" />
-
-
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <Button
-            android:layout_below="@+id/signup"
-            android:id="@+id/signUpButton"
-            android:layout_width="250dp"
-            android:layout_height="40dp"
-            android:text="Sign Up"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            android:background="@drawable/round"
+            android:textColorHint="@color/white"
             android:textSize="16sp"
-            android:fontFamily="@font/montserrat"
-            android:layout_marginBottom="10dp"/>
+            android:inputType="textEmailAddress"
+            android:drawableLeft="@drawable/email"
+            android:drawablePadding="20dp"
+            />
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="40dp"
+
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="320dp"
             android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:visibility="gone"/>
+            android:background="@drawable/squareblue"
+            android:hint="Passsword"
+            android:ems="10"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="10dp"
+            android:textStyle="bold"
+            android:fontFamily="@font/montserrat"
+            android:textSize="16sp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:drawableLeft="@drawable/lock"
+            android:drawablePadding="20dp"
+            android:inputType="textPassword"
+            android:layout_marginBottom="20dp"/>
 
-    </FrameLayout>
 
+        <EditText
+            android:id="@+id/reference"
+            android:layout_width="320dp"
+            android:layout_height="40dp"
+            android:background="@drawable/squareblue"
+            android:hint="Reference (Optional)"
+            android:ems="10"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="10dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:paddingRight="20dp"
+            android:textStyle="bold"
+            android:layout_marginBottom="10dp"
+            android:fontFamily="@font/montserrat"
+            android:textSize="16sp"
+            android:drawableLeft="@drawable/refer"
+            android:inputType="text"
+            android:drawablePadding="20dp"
 
-
-    <TextView
-        android:id="@+id/text2"
-        android:layout_below="@+id/reference"
-        android:layout_width="350dp"
-        android:textColor="@color/white"
-        android:fontFamily="@font/montserrat"
-        android:textSize="15sp"
-        android:text="@string/term_and_conditions"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:textAlignment="center"
-        android:layout_marginBottom="30dp"/>
-
-    <TextView
-        android:id="@+id/text6"
-        android:layout_below="@+id/text5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/sign_up_with"
-        android:fontFamily="@font/montserrat"
-        android:textStyle="bold"
-        android:textColor="@color/white"
-        android:textSize="14sp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="5dp"/>
-
-    <LinearLayout
-        android:id="@+id/all"
-        android:layout_below="@+id/text6"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_marginBottom="40dp">
-
-        <ImageView
-            android:id="@+id/google"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:background="@drawable/google"
-            android:layout_margin="10dp"
             />
 
-        <ImageView
-            android:id="@+id/linkedin"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:background="@drawable/linkedin"
-            android:layout_margin="10dp"
-            />
 
-        <FrameLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="320dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
 
-    <com.facebook.login.widget.LoginButton
-        android:id="@+id/fb"
-        android:layout_height="35dp"
-        android:layout_width="35dp"
-        android:visibility="gone"
-        android:layout_margin="10dp"
-        />
-
-        <ImageButton
-            android:id="@+id/facebook"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:background="@drawable/facebook"
-            android:layout_margin="10dp"
-            />
-</FrameLayout>
-
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-
-            <com.twitter.sdk.android.core.identity.TwitterLoginButton
-                android:id="@+id/twitter"
+            <CheckBox
+                android:id="@+id/checkbox"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
-                android:layout_marginTop="10dp"
-                android:visibility="gone"/>
+                app:buttonTint="@color/white"/>
 
-        <ImageView
-            android:id="@+id/tw__twitter_logo"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_margin="10dp"
-            android:background="@drawable/twitter"
-            />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="I agree to all statements included in"
+                android:fontFamily="@font/montserrat"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                android:layout_marginLeft="5dp"
+                />
 
-        </FrameLayout>
+            <TextView
+                android:id="@+id/terms"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Terms"
+                android:fontFamily="@font/montserrat"
+                android:textColor="@color/blue"
+                android:textSize="12sp"
+                android:layout_marginLeft="5dp"
+                android:textStyle="bold"
+                />
 
-    </LinearLayout>
+        </LinearLayout>
 
 
-    <LinearLayout
-        android:layout_below="@+id/all"
-        android:id="@+id/signInButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center">
 
-        <TextView
-            android:layout_width="wrap_content"
+
+        <Button
+            android:id="@+id/signUp"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
-            android:text="@string/already_have_account"
+            android:layout_margin="40dp"
+            android:background="@drawable/roundgbluebutton"
             android:fontFamily="@font/montserrat"
-            android:textStyle="bold"
+            android:text="Continue"
+            android:textAlignment="center"
             android:textColor="@color/white"
-            android:textSize="15sp"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:padding="10dp"
+            android:layout_centerHorizontal="true"
             />
-
-        <TextView
-            android:id="@+id/signIntv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:fontFamily="@font/montserrat"
-            android:text="@string/sign_in"
-            android:textColor="@color/green"
-            android:textSize="15sp"
-            android:textStyle="bold" />
 
     </LinearLayout>
 
 
-
-</LinearLayout>
+</RelativeLayout>
