--- a/app/src/main/res/layout/activity_user__detail.xml
+++ b/app/src/main/res/layout/activity_user__detail.xml
@@ -5,162 +5,204 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@drawable/greensquare"
+    android:background="@color/black"
     tools:context=".SignUp.User_Detail">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/montserrat"
-        android:text="Great, now help us know"
-        android:textColor="@color/white"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="5dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/montserrat"
-        android:text="you more"
-        android:textColor="@color/white"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="30dp"
-        android:layout_marginTop="-10dp"/>
-
-    <EditText
-        android:id="@+id/reference"
-        android:layout_width="250dp"
-        android:layout_height="50dp"
-        android:hint="Full Name"
-        android:background="@drawable/square"
-        android:layout_centerHorizontal="true"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:layout_marginBottom="20dp"
-        android:padding="5dp"
-        android:fontFamily="@font/montserrat"
-        android:textColorHint="@android:color/darker_gray"
-        android:textColor="@color/white"
-        />
-
-
-
-    <EditText
-        android:id="@+id/state"
-        android:layout_width="250dp"
-        android:layout_height="50dp"
-        android:hint="State"
-        android:background="@drawable/square"
-        android:layout_centerHorizontal="true"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:layout_marginBottom="20dp"
-        android:padding="5dp"
-        android:fontFamily="@font/montserrat"
-        android:textColorHint="@android:color/darker_gray"
-        android:textColor="@color/white"
-        />
-
-    <EditText
-        android:id="@+id/Hometown"
-        android:layout_width="250dp"
-        android:layout_height="50dp"
-        android:hint="Hometown"
-        android:background="@drawable/square"
-        android:layout_centerHorizontal="true"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:layout_marginBottom="20dp"
-        android:padding="5dp"
-        android:fontFamily="@font/montserrat"
-        android:textColorHint="@android:color/darker_gray"
-        android:textColor="@color/white"
-        />
-
-    <LinearLayout
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:gravity="left">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
-            android:text="Gender"
+            android:text="Great, now help us know"
             android:textColor="@color/white"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="5dp" />
-    </LinearLayout>
 
-
-    <LinearLayout
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_marginBottom="20dp">
-
-        <Button
-            android:id="@+id/male"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
-            android:text="male"
+            android:text="you more"
             android:textColor="@color/white"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:layout_centerHorizontal="true"
-            android:textSize="13sp"
-            android:background="@drawable/greysquare"
-            android:layout_marginRight="30dp"
+            android:layout_marginBottom="40dp"
+            android:layout_marginTop="-10dp"/>
+
+        <EditText
+            android:id="@+id/reference"
+            android:layout_width="320dp"
+            android:layout_height="40dp"
+            android:hint="Full Name"
+            android:background="@drawable/squareblue"
+            android:ems="10"
+            android:layout_centerHorizontal="true"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:inputType="text"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="@font/montserrat"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="10dp"
+            android:drawableLeft="@drawable/user"
+            android:drawablePadding="10dp"
             />
 
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+
+            <EditText
+                android:id="@+id/state"
+                android:layout_width="210dp"
+                android:layout_height="40dp"
+                android:hint="State"
+                android:background="@drawable/squareblue"
+                android:layout_centerHorizontal="true"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:ems="10"
+                android:inputType="text"
+                android:layout_marginBottom="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:paddingLeft="10dp"
+                android:fontFamily="@font/montserrat"
+                android:textColorHint="@color/white"
+                android:textColor="@color/white"
+                android:layout_marginRight="20dp"
+                />
+
+            <EditText
+                android:id="@+id/pincode"
+                android:layout_width="90dp"
+                android:layout_height="40dp"
+                android:hint="Pincode"
+                android:background="@drawable/squareblue"
+                android:layout_centerHorizontal="true"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:ems="10"
+                android:layout_marginBottom="20dp"
+                android:inputType="number"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:paddingLeft="10dp"
+                android:fontFamily="@font/montserrat"
+                android:textColorHint="@color/white"
+                android:textColor="@color/white"
+                />
+
+        </LinearLayout>
+
+
+
+        <LinearLayout
+            android:layout_width="320dp"
+            android:layout_height="wrap_content"
+            android:gravity="left">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat"
+                android:text="Select Gender"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="10dp" />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_marginBottom="20dp">
+
+            <Button
+                android:id="@+id/male"
+                android:layout_width="140dp"
+                android:layout_height="match_parent"
+                android:layout_centerHorizontal="true"
+                android:layout_marginRight="40dp"
+                android:background="@drawable/squareblue"
+                android:fontFamily="@font/montserrat"
+                android:text="male"
+                android:textColor="@color/white"
+                android:textSize="13sp"
+                android:textStyle="bold"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:paddingLeft="10dp"
+                android:drawableLeft="@drawable/man"
+                android:drawablePadding="10dp"/>
+
+            <Button
+                android:id="@+id/female"
+                android:layout_width="140dp"
+                android:layout_height="40dp"
+                android:fontFamily="@font/montserrat"
+                android:text="female"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="13sp"
+                android:background="@drawable/squareblue"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:paddingLeft="10dp"
+                android:drawableLeft="@drawable/woman"
+                android:drawablePadding="10dp"
+
+                />
+
+        </LinearLayout>
+
+
+        <TextView
+            android:id="@+id/dateOfBirth"
+            android:layout_width="320dp"
+            android:layout_height="40dp"
+            android:hint="Select Date Of Birth"
+            android:background="@drawable/squareblue"
+            android:layout_centerHorizontal="true"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:layout_marginBottom="40dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="10dp"
+            android:fontFamily="@font/montserrat"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
+            android:drawableLeft="@drawable/bottomarrow"
+            android:drawablePadding="10dp"
+            android:textAlignment="center"
+            />
+
+
+
         <Button
-            android:id="@+id/female"
-            android:layout_width="100dp"
+            android:id="@+id/btn_detail"
+            android:layout_width="320dp"
             android:layout_height="40dp"
             android:fontFamily="@font/montserrat"
-            android:text="female"
+            android:text="Sign Up"
             android:textColor="@color/white"
             android:textStyle="bold"
-            android:textSize="13sp"
             android:layout_centerHorizontal="true"
-            android:background="@drawable/greysquare" />
+            android:background="@drawable/roundgbluebutton"
+            />
+
 
     </LinearLayout>
-
-    <EditText
-        android:id="@+id/dateOfBirth"
-        android:layout_width="250dp"
-        android:layout_height="50dp"
-        android:hint="Date Of Birth"
-        android:background="@drawable/square"
-        android:layout_centerHorizontal="true"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:layout_marginBottom="30dp"
-        android:padding="5dp"
-        android:fontFamily="@font/montserrat"
-        android:textColorHint="@android:color/darker_gray"
-        android:textColor="@color/white"
-        />
-
-
-    <Button
-        android:id="@+id/btn_detail"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/montserrat"
-        android:text="SUBMIT"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:layout_centerHorizontal="true"
-        android:background="@drawable/round"
-        />
-
-
-</LinearLayout>
