--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,21 +6,8 @@
 
     <color name="gray">#585858</color>
 
-    <color name="aqua">#32cd32</color>
-    <color name="yellow">#ffff00</color>
-    <color name="pink">#ff69b4</color>
-    <color name="dpurple">#7920B2</color>
-    <color name="lpurple">#984CC2</color>
-    <color name="orange">#ffa500</color>
-    <color name="red">#ff0000</color>
-    <color name="sblue">#00ffff</color>
-    <color name="cssgreen">#38f9d7</color>
-    <color name="cssblue">#009efd</color>
-    <color name="csswhite">#fed6e3</color>
-    <color name="lightblue">#4E65FF</color>
 
-
-    <color name="blue">#0000ff</color>
+    <color name="blue">#6200EE</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="green">#5CD183</color>
