--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -19,18 +19,15 @@
         android:textSize="17sp"
         android:textStyle="bold"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
-        android:drawableRight="@drawable/bottomarrow"
-        android:background="@drawable/squareblue"
         android:padding="10dp"
         />
+
 
     <LinearLayout
         android:id="@+id/graduationlayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:visibility="gone">
+        android:orientation="vertical">
 
         <EditText
             android:id="@+id/course_name1"
@@ -40,10 +37,10 @@
             android:background="@drawable/squareblue"
             android:ems="10"
             android:layout_centerHorizontal="true"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             android:inputType="text"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="5dp"
             android:fontFamily="@font/montserrat"
             android:textColorHint="@color/white"
             android:textColor="@color/white"
@@ -60,10 +57,10 @@
             android:background="@drawable/squareblue"
             android:ems="10"
             android:layout_centerHorizontal="true"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             android:inputType="text"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="5dp"
             android:fontFamily="@font/montserrat"
             android:textColorHint="@color/white"
             android:textColor="@color/white"
@@ -80,10 +77,10 @@
             android:background="@drawable/squareblue"
             android:ems="10"
             android:layout_centerHorizontal="true"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             android:inputType="text"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="5dp"
             android:fontFamily="@font/montserrat"
             android:textColorHint="@color/white"
             android:textColor="@color/white"
@@ -100,7 +97,7 @@
             android:background="@drawable/squareblue"
             android:ems="10"
             android:layout_centerHorizontal="true"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             android:inputType="text"
             android:layout_marginBottom="10dp"
@@ -125,9 +122,6 @@
         android:textSize="17sp"
         android:textStyle="bold"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
-        android:drawableRight="@drawable/bottomarrow"
-        android:background="@drawable/squareblue"
         android:padding="10dp"
         />
 
@@ -135,8 +129,7 @@
         android:id="@+id/post_graduation_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:visibility="gone">
+        android:orientation="vertical">
 
         <EditText
             android:id="@+id/course_name2"
@@ -146,10 +139,10 @@
             android:background="@drawable/squareblue"
             android:ems="10"
             android:layout_centerHorizontal="true"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             android:inputType="text"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="5dp"
             android:fontFamily="@font/montserrat"
             android:textColorHint="@color/white"
             android:textColor="@color/white"
@@ -166,10 +159,10 @@
             android:background="@drawable/squareblue"
             android:ems="10"
             android:layout_centerHorizontal="true"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             android:inputType="text"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="5dp"
             android:fontFamily="@font/montserrat"
             android:textColorHint="@color/white"
             android:textColor="@color/white"
@@ -186,10 +179,10 @@
             android:background="@drawable/squareblue"
             android:ems="10"
             android:layout_centerHorizontal="true"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             android:inputType="text"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="5dp"
             android:fontFamily="@font/montserrat"
             android:textColorHint="@color/white"
             android:textColor="@color/white"
@@ -206,10 +199,10 @@
             android:background="@drawable/squareblue"
             android:ems="10"
             android:layout_centerHorizontal="true"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             android:inputType="text"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="20dp"
             android:fontFamily="@font/montserrat"
             android:textColorHint="@color/white"
             android:textColor="@color/white"
@@ -232,7 +225,7 @@
         android:textSize="16sp"
         android:textStyle="bold"
         android:inputType="text"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:fontFamily="@font/montserrat"
         android:textColorHint="@color/white"
         android:textColor="@color/white"
@@ -246,7 +239,7 @@
         android:id="@+id/aadhar_card"
         android:layout_width="320dp"
         android:layout_height="40dp"
-        android:hint="AAdhar Card Number"
+        android:hint="Aadhar Card Number"
         android:background="@drawable/squareblue"
         android:ems="10"
         android:layout_centerHorizontal="true"
