--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -42,7 +42,7 @@
             android:inputType="text"
             android:layout_marginBottom="5dp"
             android:fontFamily="@font/montserrat"
-            android:textColorHint="@color/white"
+            android:textColorHint="@color/gray"
             android:textColor="@color/white"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
@@ -62,7 +62,7 @@
             android:inputType="text"
             android:layout_marginBottom="5dp"
             android:fontFamily="@font/montserrat"
-            android:textColorHint="@color/white"
+            android:textColorHint="@color/gray"
             android:textColor="@color/white"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
@@ -82,7 +82,7 @@
             android:inputType="text"
             android:layout_marginBottom="5dp"
             android:fontFamily="@font/montserrat"
-            android:textColorHint="@color/white"
+            android:textColorHint="@color/gray"
             android:textColor="@color/white"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
@@ -102,7 +102,7 @@
             android:inputType="text"
             android:layout_marginBottom="10dp"
             android:fontFamily="@font/montserrat"
-            android:textColorHint="@color/white"
+            android:textColorHint="@color/gray"
             android:textColor="@color/white"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
@@ -144,7 +144,7 @@
             android:inputType="text"
             android:layout_marginBottom="5dp"
             android:fontFamily="@font/montserrat"
-            android:textColorHint="@color/white"
+            android:textColorHint="@color/gray"
             android:textColor="@color/white"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
@@ -164,7 +164,7 @@
             android:inputType="text"
             android:layout_marginBottom="5dp"
             android:fontFamily="@font/montserrat"
-            android:textColorHint="@color/white"
+            android:textColorHint="@color/gray"
             android:textColor="@color/white"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
@@ -184,7 +184,7 @@
             android:inputType="text"
             android:layout_marginBottom="5dp"
             android:fontFamily="@font/montserrat"
-            android:textColorHint="@color/white"
+            android:textColorHint="@color/gray"
             android:textColor="@color/white"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
@@ -204,7 +204,7 @@
             android:inputType="text"
             android:layout_marginBottom="20dp"
             android:fontFamily="@font/montserrat"
-            android:textColorHint="@color/white"
+            android:textColorHint="@color/gray"
             android:textColor="@color/white"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
@@ -227,7 +227,7 @@
         android:inputType="text"
         android:layout_marginBottom="10dp"
         android:fontFamily="@font/montserrat"
-        android:textColorHint="@color/white"
+        android:textColorHint="@color/gray"
         android:textColor="@color/white"
         android:padding="10dp"
         android:paddingLeft="10dp"
@@ -248,7 +248,7 @@
         android:inputType="text"
         android:layout_marginBottom="40dp"
         android:fontFamily="@font/montserrat"
-        android:textColorHint="@color/white"
+        android:textColorHint="@color/gray"
         android:textColor="@color/white"
         android:padding="10dp"
         android:paddingLeft="10dp"
