--- a/app/src/main/res/layout/activity_phone.xml
+++ b/app/src/main/res/layout/activity_phone.xml
@@ -61,7 +61,7 @@
             android:fontFamily="@font/montserrat"
             android:textStyle="bold"
             android:textColor="@color/white"
-            android:textColorHint="@color/white"
+            android:textColorHint="@color/gray"
             android:textSize="16sp"/>
 
         <EditText
@@ -77,7 +77,7 @@
             android:fontFamily="@font/montserrat"
             android:layout_marginLeft="20dp"
             android:textColor="@color/white"
-            android:textColorHint="@color/white"
+            android:textColorHint="@color/gray"
             android:textSize="16sp"/>
 
     </LinearLayout>
