--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -52,7 +52,7 @@
             android:layout_margin="20dp"
             android:fontFamily="@font/montserrat"
             android:textColor="@color/white"
-            android:textColorHint="@color/white"
+            android:textColorHint="@color/gray"
             android:textSize="16sp"
             android:inputType="textEmailAddress"
             android:drawableLeft="@drawable/email"
@@ -74,7 +74,7 @@
             android:fontFamily="@font/montserrat"
             android:textSize="16sp"
             android:textColor="@color/white"
-            android:textColorHint="@color/white"
+            android:textColorHint="@color/gray"
             android:drawableLeft="@drawable/lock"
             android:drawablePadding="20dp"
             android:inputType="textPassword"
@@ -92,7 +92,7 @@
             android:paddingBottom="10dp"
             android:paddingLeft="10dp"
             android:textColor="@color/white"
-            android:textColorHint="@color/white"
+            android:textColorHint="@color/gray"
             android:paddingRight="20dp"
             android:textStyle="bold"
             android:layout_marginBottom="10dp"
